DetailItem: fix icon size

--- a/SimpleWeather.UWP/Themes/Generic.xaml
+++ b/SimpleWeather.UWP/Themes/Generic.xaml
@@ -238,7 +238,8 @@
                         MinWidth="{TemplateBinding MinWidth}"
                         MinHeight="{TemplateBinding MinHeight}"
                         MaxWidth="{TemplateBinding MaxWidth}"
-                        MaxHeight="{TemplateBinding MaxHeight}" />
+                        MaxHeight="{TemplateBinding MaxHeight}"
+                        Stretch="Uniform" />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
