WeatherNow: account for AlertButton size in SpacerRow calculation

--- a/SimpleWeather.UWP/Controls/WeatherAlertPanel.xaml
+++ b/SimpleWeather.UWP/Controls/WeatherAlertPanel.xaml
@@ -35,7 +35,7 @@
                 <SolidColorBrush x:Key="ExpanderChevronPressedBackground" Color="#0A000000" />
             </muxc:Expander.Resources>
             <muxc:Expander.Header>
-                <Grid Padding="5">
+                <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="40" />
                         <ColumnDefinition Width="*" />
