--- a/SimpleWeather.UWP/Main/Shell.xaml
+++ b/SimpleWeather.UWP/Main/Shell.xaml
@@ -112,7 +112,7 @@
                             Margin="-12"
                             Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"
                             ShowAsMonochrome="True"
-                            UriSource="ms-appx:///SimpleWeather.Shared/Assets/WeatherIcons/png/dark/wi-day-cloudy.png" />
+                            UriSource="/Assets/SolarStroke.png" />
                     </muxc:NavigationViewItem.Icon>
                 </muxc:NavigationViewItem>
                 <muxc:NavigationViewItem
